--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "expo": {
     "name": "minhas-tarefas",
+    "entryPoint": "./node_modules/expo-router/entry",
     "slug": "minhas-tarefas",
+    "scheme": "minhas-tarefas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
